--- a/bin/modified.conf
+++ b/bin/modified.conf
@@ -111,9 +111,8 @@ address=/wikipedia.org/218.254.1.15
 address=/dropbox.com/219.76.4.4
 
 #github
-address=/github.com/218.254.1.15
-address=/githubusercontent.com/218.254.1.15
-address=/s3.amazonaws.com/218.254.1.15
+#address=/github.com/218.254.1.15
+#address=/githubusercontent.com/218.254.1.15
 
 #Box.com
 address=/box.com/74.112.184.70
