--- a/bin/modified.conf
+++ b/bin/modified.conf
@@ -13,7 +13,7 @@ address=/apkpure.com/218.254.1.15
 
 #telegram
 address=/telegram.org/149.154.167.99
-address=/tdesktop.com/149.154.167.80
+#address=/tdesktop.com/149.154.167.80
 address=/telegram.me/149.154.167.118
 
 #vimeo.com
@@ -23,61 +23,58 @@ address=/vimeo.com/218.254.1.15
 address=/tumblr.com/218.254.1.15
 
 #GOOGLE
-address=/googleapis.com/218.254.1.15
+address=/googleapis.com/202.39.143.114
 address=/getmdl.io/64.233.188.121
 address=/google-analytics.com/203.208.39.225
 address=/abc.xyz/218.254.1.15
 address=/dl.google.com/203.208.39.228
-address=/google.com/218.254.1.15
+address=/google.com/202.39.143.114
 address=/gcr.io/218.254.1.15
 address=/ingress.com/218.254.1.15
 address=/appspot.com/218.254.1.15
-address=/google.com.hk/218.254.1.15
-address=/google.co.jp/218.254.1.15
+address=/google.com.hk/202.39.143.114
+address=/google.co.jp/202.39.143.114
 
-address=/1e100.net/218.254.1.15
-address=/android.com/218.254.1.15
+#address=/1e100.net/218.254.1.15
+address=/android.com/202.39.143.114
 address=/logger.com/218.254.1.15
 address=/blogblog.com/218.254.1.15
 address=/textcube.com/218.254.1.15
 address=/blogspot.com/218.254.1.15
 address=/chrome.com/218.254.1.15
-address=/googlesource.com/218.254.1.15
+address=/googlesource.com/202.39.143.114
 address=/googlecode.com/218.254.1.15
 address=/gmodules.com/218.254.1.15
-address=/googleadservices.com/203.208.43.77
+#address=/googleadservices.com/203.208.43.77
 
-
-address=/gvt0.com/218.254.1.15
-address=/gvt1.com/218.254.1.15
-address=/gvt2.com/218.254.1.15
-address=/gvt3.com/218.254.1.15
+address=/gvt1.com/202.39.143.114
+address=/gvt2.com/202.39.143.114
 
 #youtube
-address=/youtu.be/218.254.1.15
-address=/youtube.com/218.254.1.15
-address=/ytimg.com/218.254.1.15
-address=/googlevideo.com/218.254.1.15
+address=/youtu.be/202.39.143.114
+address=/youtube.com/202.39.143.114
+address=/ytimg.com/202.39.143.114
+address=/googlevideo.com/61.238.239.156
 
 
 #gstaticStart
-address=/fonts.gstatic.com/218.254.1.15
-address=/ggpht.com/218.254.1.15
-address=/gstatic.com/218.254.1.15
+address=/fonts.gstatic.com/202.39.143.114
+address=/ggpht.com/202.39.143.114
+address=/gstatic.com/202.39.143.114
 
 #GoogleapisStart
-address=/goo.gl/218.254.1.15
-address=/g.co/218.254.1.15
+address=/goo.gl/202.39.143.114
+address=/g.co/202.39.143.114
 address=/simplenote.com/218.254.1.15
-address=/googleapis.com/218.254.1.15
-address=/2mdn.net/218.254.1.15
-address=/urchin.com/218.254.1.15
+address=/googleapis.com/202.39.143.114
+address=/2mdn.net/202.39.143.114
+address=/urchin.com/202.39.143.114
 address=/feedburner.com/218.254.1.15
 address=/golang.org/218.254.1.15
 address=/panoramio.com/218.254.1.15
 address=/recaptcha.net/218.254.1.15
-address=/googleusercontent.com/218.254.1.15
-address=/doubleclick.net/218.254.1.15
+address=/googleusercontent.com/202.39.143.114
+address=/doubleclick.net/202.39.143.114
 
 #GoogleChina
 address=/translate.google.cn/203.208.43.112
