--- a/bin/modified.conf
+++ b/bin/modified.conf
@@ -1,7 +1,3 @@
-address=/zhaoxin.ista1997.com/106.185.48.221
-#apkpure
-address=/apkpure.com/218.254.1.15
-
 
 #rockstar
 #address=/conductor-prod.ros.rockstargames.com/192.81.241.11
@@ -16,122 +12,72 @@ address=/telegram.org/149.154.167.99
 #address=/tdesktop.com/149.154.167.80
 address=/telegram.me/149.154.167.118
 
-#vimeo.com
-address=/vimeo.com/218.254.1.15
+# Localhost (DO NOT REMOVE) Start
+127.0.0.1	localhost
+::1	localhost
+::1	ip6-localhost
+::1	ip6-loopback
+# Localhost (DO NOT REMOVE) End
 
-#tumblr
-address=/tumblr.com/218.254.1.15
+# Amazon AWS Start
+52.216.80.48	github-cloud.s3.amazonaws.com
+54.231.40.3	github-com.s3.amazonaws.com
+219.76.4.4	github-production-release-asset-2e65be.s3.amazonaws.com
+# Amazon AWS End
 
-#GOOGLE
-address=/googleapis.com/61.91.161.217
-address=/getmdl.io/64.233.188.121
-address=/google-analytics.com/203.208.39.225
-address=/abc.xyz/218.254.1.15
-address=/dl.google.com/203.208.39.228
-address=/google.com/61.91.161.217
-address=/gcr.io/218.254.1.15
-address=/ingress.com/218.254.1.15
-address=/appspot.com/218.254.1.15
-address=/google.com.hk/61.91.161.217
-address=/google.co.jp/61.91.161.217
+# Android Start
+216.58.200.33	android.com
+216.58.200.33	android-china.l.google.com
+216.58.200.33	android.clients.google.com
+216.58.200.33	android-market.l.google.com
+216.58.200.33	android.l.google.com
+216.58.200.33	android.googleblog.com
+216.58.200.33	androidstudio.googleblog.com
+216.58.200.33	android-developers.googleblog.com
+216.58.200.33	android-developers.blogspot.com
+216.58.200.33	android-developers.blogspot.hk
+216.58.200.33	officialandroid.blogspot.com
+216.58.200.33	android.googlecode.com
+216.58.200.33	android.googlesource.com
+216.58.200.33	android-review.googlesource.com
+216.58.200.33	androidmarket.googleusercontent.com
+216.58.200.33	android.googleapis.com
+216.58.200.33	jmoore-dot-android-experiments.appspot.com
+64.233.188.121	b.android.com
+64.233.188.121	m.android.com
+64.233.188.121	tools.android.com
+64.233.191.121	jmoore-dot-android-experiments.appspot.com
+64.233.191.121	maven.google.com
+# Android End
 
-#address=/1e100.net/218.254.1.15
-address=/android.com/61.91.161.217
-address=/logger.com/218.254.1.15
-address=/blogblog.com/218.254.1.15
-address=/textcube.com/218.254.1.15
-address=/blogspot.com/218.254.1.15
-address=/chrome.com/218.254.1.15
-address=/googlesource.com/61.91.161.217
-address=/googlecode.com/218.254.1.15
-address=/gmodules.com/218.254.1.15
-#address=/googleadservices.com/203.208.43.77
+# Apkpure Start
+104.20.82.194	apkpure.com
+104.20.82.194	a.apkpure.com
+104.20.82.194	download.apkpure.com
+104.20.82.194	m.apkpure.com
+104.20.82.194	i.apkpure.com
+104.20.82.194	static.apkpure.com
+104.20.82.194	translate.apkpure.com
+# Apkpure End
 
-address=/gvt1.com/218.254.1.15
-address=/gvt2.com/218.254.1.15
+# Archive Start
+207.241.224.22	archive.org
+207.241.224.22	www.archive.org
+207.241.224.22	analytics.archive.org
+207.241.224.22	ia802704.us.archive.org
+207.241.225.186	web-beta.archive.org
+207.241.225.186	wwwb-sentry.us.archive.org
+207.241.226.190	web.archive.org
+# Archive End
 
-#youtube
-address=/youtu.be/61.91.161.217
-address=/youtube.com/61.91.161.217
-address=/ytimg.com/61.91.161.217
-address=/googlevideo.com/218.254.1.15
+# Armorgames Start
+93.184.220.39	agi.armorgames.com
+93.184.220.39	armatars.armorgames.com
+93.184.220.39	cache.armorgames.com
+93.184.220.39	gamemedia.armorgames.com
+93.184.220.39	quests.armorgames.com
+# Armorgames End
 
-
-#gstaticStart
-address=/fonts.gstatic.com/61.91.161.217
-address=/ggpht.com/61.91.161.217
-address=/gstatic.com/61.91.161.217
-
-#GoogleapisStart
-address=/goo.gl/61.91.161.217
-address=/g.co/61.91.161.217
-address=/simplenote.com/218.254.1.15
-address=/googleapis.com/61.91.161.217
-address=/2mdn.net/61.91.161.217
-address=/urchin.com/61.91.161.217
-address=/feedburner.com/218.254.1.15
-address=/golang.org/218.254.1.15
-address=/panoramio.com/218.254.1.15
-address=/recaptcha.net/218.254.1.15
-address=/googleusercontent.com/61.91.161.217
-address=/doubleclick.net/61.91.161.217
-
-#GoogleChina
-address=/translate.google.cn/203.208.43.112
-address=/ditu.google.cn/203.208.43.113
-address=/google.cn/203.208.40.146
-
-#facebook
-address=/fb.me/218.254.1.15
-address=/messages-facebook.com/218.254.1.15
-address=/facebook.net/218.254.1.15
-address=/facebook.com/218.254.1.15
-address=/fbcdn.net/218.254.1.15
-address=/messenger.com/218.254.1.15
-
-#instagram
-address=/instagram.com/218.254.1.15
-address=/cdninstagram.com/218.254.1.15
-
-#twitter
-address=/twitter.com/218.254.1.15
-address=/tweetdeck.com/218.254.1.15
-address=/t.co/218.254.1.15
-address=/twitpic.com/218.254.1.15
-address=/tinypic.com/218.254.1.15
-address=/twimg.com/218.254.1.15
-
-#wikipedia
-address=/wikipedia.org/218.254.1.15
-
-#dropbox
-address=/dropbox.com/219.76.4.4
-
-#github
-#address=/github.com/218.254.1.15
-#address=/githubusercontent.com/218.254.1.15
-
-#Box.com
-address=/box.com/74.112.184.70
-address=/box.net/74.112.184.80
-
-
-#wordpress
-address=/videopress.com/218.254.1.15
-address=/gravatar.com/218.254.1.15
-address=/wordpress.com/218.254.1.15
-address=/wp.com/218.254.1.15
-address=/w.org/218.254.1.15
-
-
-#origin
-#address=/origin-a.akamaihd.net/58.240.53.194
-
-#Archive 
-address=/archive.org/218.254.1.15
-
-#DuckDuckGo
-address=/duckduckgo.com/218.254.1.15
-
-#Imgur
-address=/imgur.com/218.254.1.15
+# autodraw Start
+172.217.25.243	www.autodraw.com
+# autodraw End
