--- a/bin/modified.conf
+++ b/bin/modified.conf
@@ -12,72 +12,45 @@ address=/telegram.org/149.154.167.99
 #address=/tdesktop.com/149.154.167.80
 address=/telegram.me/149.154.167.118
 
-# Localhost (DO NOT REMOVE) Start
-127.0.0.1	localhost
-::1	localhost
-::1	ip6-localhost
-::1	ip6-loopback
-# Localhost (DO NOT REMOVE) End
-
 # Amazon AWS Start
-52.216.80.48	github-cloud.s3.amazonaws.com
-54.231.40.3	github-com.s3.amazonaws.com
-219.76.4.4	github-production-release-asset-2e65be.s3.amazonaws.com
+address=/github-cloud.s3.amazonaws.com/52.216.80.48
+address=/github-com.s3.amazonaws.com/54.231.40.3
+address=/github-production-release-asset-2e65be.s3.amazonaws.com/219.76.4.4
 # Amazon AWS End
 
 # Android Start
-216.58.200.33	android.com
-216.58.200.33	android-china.l.google.com
-216.58.200.33	android.clients.google.com
-216.58.200.33	android-market.l.google.com
-216.58.200.33	android.l.google.com
-216.58.200.33	android.googleblog.com
-216.58.200.33	androidstudio.googleblog.com
-216.58.200.33	android-developers.googleblog.com
-216.58.200.33	android-developers.blogspot.com
-216.58.200.33	android-developers.blogspot.hk
-216.58.200.33	officialandroid.blogspot.com
-216.58.200.33	android.googlecode.com
-216.58.200.33	android.googlesource.com
-216.58.200.33	android-review.googlesource.com
-216.58.200.33	androidmarket.googleusercontent.com
-216.58.200.33	android.googleapis.com
-216.58.200.33	jmoore-dot-android-experiments.appspot.com
-64.233.188.121	b.android.com
-64.233.188.121	m.android.com
-64.233.188.121	tools.android.com
-64.233.191.121	jmoore-dot-android-experiments.appspot.com
-64.233.191.121	maven.google.com
+address=/android.com/216.58.200.33
+address=/android-china.l.google.com/216.58.200.33
+address=/android.clients.google.com/216.58.200.33
+address=/android-market.l.google.com/216.58.200.33
+address=/android.l.google.com/216.58.200.33
+address=/android.googleblog.com/216.58.200.33
+address=/androidstudio.googleblog.com/216.58.200.33
+address=/android-developers.googleblog.com/216.58.200.33
+address=/android-developers.blogspot.com/216.58.200.33
+address=/android-developers.blogspot.hk/216.58.200.33
+address=/officialandroid.blogspot.com/216.58.200.33
+address=/android.googlecode.com/216.58.200.33
+address=/android.googlesource.com/216.58.200.33
+address=/android-review.googlesource.com/216.58.200.33
+address=/androidmarket.googleusercontent.com/216.58.200.33
+address=/android.googleapis.com/216.58.200.33
+address=/jmoore-dot-android-experiments.appspot.com/216.58.200.33
+address=/jmoore-dot-android-experiments.appspot.com/64.233.191.121
+address=/maven.google.com/64.233.191.121
 # Android End
 
 # Apkpure Start
-104.20.82.194	apkpure.com
-104.20.82.194	a.apkpure.com
-104.20.82.194	download.apkpure.com
-104.20.82.194	m.apkpure.com
-104.20.82.194	i.apkpure.com
-104.20.82.194	static.apkpure.com
-104.20.82.194	translate.apkpure.com
+address=/apkpure.com/104.20.82.194
 # Apkpure End
 
 # Archive Start
-207.241.224.22	archive.org
-207.241.224.22	www.archive.org
-207.241.224.22	analytics.archive.org
-207.241.224.22	ia802704.us.archive.org
-207.241.225.186	web-beta.archive.org
-207.241.225.186	wwwb-sentry.us.archive.org
-207.241.226.190	web.archive.org
+address=/archive.org/207.241.224.22
+address=/web-beta.archive.org/207.241.225.186
+address=/wwwb-sentry.us.archive.org/207.241.225.186
+address=/web.archive.org/207.241.226.190
 # Archive End
 
-# Armorgames Start
-93.184.220.39	agi.armorgames.com
-93.184.220.39	armatars.armorgames.com
-93.184.220.39	cache.armorgames.com
-93.184.220.39	gamemedia.armorgames.com
-93.184.220.39	quests.armorgames.com
-# Armorgames End
-
 # autodraw Start
-172.217.25.243	www.autodraw.com
+address=/autodraw.com/172.217.25.243
 # autodraw End
