--- a/bin/modified.conf
+++ b/bin/modified.conf
@@ -1,12 +1,4 @@
 
-#rockstar
-#address=/conductor-prod.ros.rockstargames.com/192.81.241.11
-#address=/patches.rockstargames.com/203.77.188.254
-#address=/prod.cs.ros.rockstargames.com/54.68.144.99
-#address=/prod.p01sjc.pod.rockstargames.com/192.81.245.200
-#address=/prod.ros.rockstargames.com/192.81.241.100
-#address=/prod.telemetry.ros.rockstargames.com/52.11.47.64
-
 #telegram
 address=/telegram.org/149.154.167.99
 #address=/tdesktop.com/149.154.167.80
@@ -54,3 +46,72 @@ address=/web.archive.org/207.241.226.190
 # autodraw Start
 address=/autodraw.com/172.217.25.243
 # autodraw End
+# Google Start
+216.58.200.33	com.google
+216.58.200.33	domains.google
+216.58.200.33	environment.google
+216.58.200.33	google.com
+216.58.200.33	google.com.hk
+216.58.200.33	google.com.sg
+216.58.200.33	google.com.tw
+216.58.200.33	gcr.io
+216.58.200.33	googlegroups.com
+216.58.200.33	gmodules.com
+216.58.200.33	googlestore.com
+216.58.200.33	googlechinawebmaster.com
+216.58.200.33	googlemashups.com
+216.58.200.33	googleblog.com
+216.58.200.33	blogger.com
+216.58.200.33	googleblog.com
+216.58.200.33	textcube.com
+216.58.200.33	blogspot.com
+216.58.200.33	googleadservices.com
+216.58.200.33	chrome.com
+216.58.200.33	chromestatus.com
+216.58.200.33	chromium.org
+216.58.200.33	appspot.com
+216.58.200.33	googlecode.com
+216.58.200.33	googlesource.com
+216.58.200.33	googledrive.com
+216.58.200.33	gvt0.com
+216.58.200.33	domains.google
+216.58.200.33	registry.google
+216.58.200.33	domains.google
+216.58.200.33	googlehosted.com
+216.58.200.33	googleartproject.com
+216.58.200.33	feedburner.com
+216.58.200.33	golang.org
+216.58.200.33	goo.gl
+216.58.200.33	g.co
+216.58.200.33	google.org
+216.58.200.33	panoramio.com
+216.58.200.33	recaptcha.net
+216.58.200.33	webmproject.org
+216.58.200.33	chromercise.com
+216.58.200.33	data-vocabulary.org
+216.58.200.33	googleinsidesearch.com
+216.58.200.33	teachparentstech.org
+216.58.200.33	thinkwithgoogle.com
+216.58.200.33	oneworldmanystories.com
+216.58.200.33	admob.com
+216.58.200.33	withgoogle.com
+216.58.200.33	youtu.be
+216.58.200.33	ytimg.com
+216.239.38.21	material.io
+216.58.206.14	attribution.google.com
+216.58.196.236	googlezip.net
+216.239.34.21	polymer-project.org
+# Google End
+
+# gstatic Start
+216.58.200.33	ggpht.com
+216.58.200.33	gstatic.com
+203.208.51.55	fonts.gstatic.com
+# gstatic End
+
+# Googleapis Start
+216.58.200.33	googleapis.com
+64.233.188.121	code.getmdl.io
+64.233.189.128	storage.googleapis.com
+# Googleapis End
+
